Fix background not stretching

--- a/client/src/components/LoginPage.css
+++ b/client/src/components/LoginPage.css
@@ -3,7 +3,7 @@
   justify-content: center;
   align-items: center;
   background-color: var(--brand);
-  height: 100vh;
+  min-height: 100vh;
   width: 100%;
   color: var(--text-normal);
 }
